[package]
name = "strange-api-wrapper"
version = "1.0.1"
authors = ["contact@hedystia.com"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
urlencoding = "2.1.3"

[dependencies.neon]
version = "1"
default-features = false
features = ["napi-6"]
